[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/lamb/Lamb_Sprite1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Boid.gd" type="Script" id=2]
[ext_resource path="res://sound/effects/Bah3.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/lamb/Lamb_Sprite2.png" type="Texture" id=4]
[ext_resource path="res://sprites/lamb/Lamb_Sprite4.png" type="Texture" id=5]
[ext_resource path="res://sprites/lamb/Lamb_Sprite3.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=7]
radius = 150.707

[sub_resource type="CircleShape2D" id=4]
radius = 198.953

[sub_resource type="CircleShape2D" id=8]
radius = 6.1612

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "walking",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 39.8992

[sub_resource type="CircleShape2D" id=6]
radius = 249.852

[node name="Boid" type="KinematicBody2D"]
position = Vector2( 517.749, 258.221 )
collision_mask = 66
script = ExtResource( 2 )

[node name="BoidProximityDetector" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoidProximityDetector"]
shape = SubResource( 7 )

[node name="DogProximityDetector" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2147483664

[node name="CollisionShape2D" type="CollisionShape2D" parent="DogProximityDetector"]
position = Vector2( -2.08386, -1.33484 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "walking"
frame = 1
playing = true

[node name="ObstacleProximityDetector" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleProximityDetector"]
shape = SubResource( 5 )

[node name="WolfProximityDetector" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WolfProximityDetector"]
shape = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "FX"
[connection signal="body_entered" from="BoidProximityDetector" to="." method="_on_BoidProximityDetector_body_entered"]
[connection signal="body_exited" from="BoidProximityDetector" to="." method="_on_BoidProximityDetector_body_exited"]
[connection signal="body_entered" from="DogProximityDetector" to="." method="_on_DogProximityDetector_body_entered"]
[connection signal="body_exited" from="DogProximityDetector" to="." method="_on_DogProximityDetector_body_exited"]
[connection signal="body_entered" from="ObstacleProximityDetector" to="." method="_on_ObstacleProximityDetector_body_entered"]
[connection signal="body_exited" from="ObstacleProximityDetector" to="." method="_on_ObstacleProximityDetector_body_exited"]
[connection signal="body_entered" from="WolfProximityDetector" to="." method="_on_WolfProximityDetector_body_entered"]
[connection signal="body_exited" from="WolfProximityDetector" to="." method="_on_WolfProximityDetector_body_exited"]
